--- a/AZDORestApiExplorer.WorkItemTrackingProcess/Presentation/Views/BehaviorMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTrackingProcess/Presentation/Views/BehaviorMain.xaml
@@ -45,8 +45,8 @@
         <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0" />
 
         <dxg:GridControl x:Name="grdResults" Grid.Row="1"
-                    ItemsSource="{Binding Behaviors.ResultItems}"
-                    SelectedItem="{Binding Behaviors.SelectedItem}"               
+                    ItemsSource="{Binding Results.ResultItems}"
+                    SelectedItem="{Binding Results.SelectedItem}"               
                     FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
@@ -76,7 +76,7 @@
             </Grid.ColumnDefinitions>
 
             <dxg:GridControl Grid.Column="0"
-                ItemsSource="{Binding Behaviors.SelectedItem.fields}"
+                ItemsSource="{Binding Results.SelectedItem.fields}"
                 ScrollViewer.CanContentScroll="True"
                 ScrollViewer.HorizontalScrollBarVisibility="Auto"
                 ScrollViewer.VerticalScrollBarVisibility="Auto">
