--- a/AZDORestApiExplorer.WorkItemTrackingProcess/Presentation/Views/WorkItemTypeMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTrackingProcess/Presentation/Views/WorkItemTypeMain.xaml
@@ -45,8 +45,8 @@
         <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0" />
 
         <dxg:GridControl x:Name="grdResults" Grid.Row="1"
-                    ItemsSource="{Binding WorkItemTypes.ResultItems}"
-                    SelectedItem="{Binding WorkItemTypes.SelectedItem}"
+                    ItemsSource="{Binding Results.ResultItems}"
+                    SelectedItem="{Binding Results.SelectedItem}"
                     FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
@@ -66,7 +66,7 @@
             
         </dxg:GridControl>
 
-        <dxe:TextEdit Grid.Row="2" Text="{Binding WorkItemTypes.SelectedItem.url}"  
+        <dxe:TextEdit Grid.Row="2" Text="{Binding Results.SelectedItem.url}"  
                       TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
 
     </Grid>
