--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/ClassificationNodeMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/ClassificationNodeMain.xaml
@@ -46,8 +46,8 @@
         <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0" />
 
         <dxg:GridControl x:Name="grdResults" Grid.Row="1"
-                    ItemsSource="{Binding ClassificationNodes.ResultItems}"
-                    SelectedItem="{Binding ClassificationNodes.SelectedItem}"
+                    ItemsSource="{Binding Results.ResultItems}"
+                    SelectedItem="{Binding Results.SelectedItem}"
                     FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
@@ -64,7 +64,7 @@
         </dxg:GridControl>
 
         <dxe:TextEdit Grid.Row="2"
-            Text="{Binding ClassificationNodes.SelectedItem.url}"
+            Text="{Binding Results.SelectedItem.url}"
             TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
 
         <Grid Grid.Row="3">
@@ -77,7 +77,7 @@
             </Grid.ColumnDefinitions>
 
             <dxg:GridControl Grid.Column="0"
-                    ItemsSource="{Binding ClassificationNodes.SelectedItem.attributes}"
+                    ItemsSource="{Binding Results.SelectedItem.attributes}"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
@@ -87,7 +87,7 @@
 
             </dxg:GridControl>
 
-            <TextBlock Grid.Column="1" Text="{Binding ClassificationNodes.SelectedItem.attributes.startDate}" />
+            <TextBlock Grid.Column="1" Text="{Binding Results.SelectedItem.attributes.startDate}" />
 
         </Grid>
 
