--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/FieldMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/FieldMain.xaml
@@ -47,8 +47,8 @@
 
         
         <dxg:GridControl x:Name="grdResults" Grid.Row="1"
-                    ItemsSource="{Binding Fields.ResultItems}"
-                    SelectedItem="{Binding Fields.SelectedItem}"
+                    ItemsSource="{Binding Results.ResultItems}"
+                    SelectedItem="{Binding Results.SelectedItem}"
                    
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
@@ -70,7 +70,7 @@
 
         </dxg:GridControl>
 
-        <dxe:TextEdit Grid.Row="2" Text="{Binding Fields.SelectedItem.url}"  
+        <dxe:TextEdit Grid.Row="2" Text="{Binding Results.SelectedItem.url}"  
                       TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
         
         <Grid Grid.Row="3">
@@ -84,7 +84,7 @@
             </Grid.ColumnDefinitions>
 
             <dxg:GridControl Grid.Column="0"
-                ItemsSource="{Binding Fields.SelectedItem.supportedOperations}"
+                ItemsSource="{Binding Results.SelectedItem.supportedOperations}"
                 ScrollViewer.CanContentScroll="True"
                 ScrollViewer.HorizontalScrollBarVisibility="Auto"
                 ScrollViewer.VerticalScrollBarVisibility="Auto">
