--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemTypeCategoryMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemTypeCategoryMain.xaml
@@ -45,8 +45,8 @@
         <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0" />
 
         <dxg:GridControl x:Name="grdResults" Grid.Row="2"
-                    ItemsSource="{Binding WorkItemTypeCategories.ResultItems}"
-                    SelectedItem="{Binding WorkItemTypeCategories.SelectedItem}"               
+                    ItemsSource="{Binding Results.ResultItems}"
+                    SelectedItem="{Binding Results.SelectedItem}"               
                     FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
@@ -61,7 +61,7 @@
             <!--<dxg:GridColumn FieldName="url" />-->
         </dxg:GridControl>
 
-        <dxe:TextEdit Grid.Row="1" Text="{Binding WorkItemTypeCategories.SelectedItem.url}"  
+        <dxe:TextEdit Grid.Row="1" Text="{Binding Results.SelectedItem.url}"  
                       TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
 
         <Grid Grid.Row="3">
@@ -74,7 +74,7 @@
             </Grid.ColumnDefinitions>
 
             <dxg:GridControl Grid.Column="0"
-                ItemsSource="{Binding WorkItemTypeCategories.SelectedItem.workItemTypes}"
+                ItemsSource="{Binding Results.SelectedItem.workItemTypes}"
                 ScrollViewer.CanContentScroll="True"
                 ScrollViewer.HorizontalScrollBarVisibility="Auto"
                 ScrollViewer.VerticalScrollBarVisibility="Auto">
