--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemTypeMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemTypeMain.xaml
@@ -46,8 +46,8 @@
         <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0" />
 
         <dxg:GridControl x:Name="grdResults" Grid.Row="1"
-                    ItemsSource="{Binding WorkItemTypes.ResultItems}"
-                    SelectedItem="{Binding WorkItemTypes.SelectedItem}"               
+                    ItemsSource="{Binding Results.ResultItems}"
+                    SelectedItem="{Binding Results.SelectedItem}"               
                     FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
@@ -68,7 +68,7 @@
 
         </dxg:GridControl>
 
-        <dxe:TextEdit Grid.Row="2" Text="{Binding WorkItemTypes.SelectedItem.url}" />
+        <dxe:TextEdit Grid.Row="2" Text="{Binding Results.SelectedItem.url}" />
 
         <Grid Grid.Row="3">
             <Grid.RowDefinitions>
@@ -84,7 +84,7 @@
             </Grid.ColumnDefinitions>
 
             <dxg:GridControl Grid.Column="0"
-                ItemsSource="{Binding WorkItemTypes.SelectedItem.states}"
+                ItemsSource="{Binding Results.SelectedItem.states}"
                 ScrollViewer.CanContentScroll="True"
                 ScrollViewer.HorizontalScrollBarVisibility="Auto"
                 ScrollViewer.VerticalScrollBarVisibility="Auto">
@@ -96,7 +96,7 @@
             </dxg:GridControl>
 
             <dxg:GridControl Grid.Column="1"
-                ItemsSource="{Binding WorkItemTypes.SelectedItem.fields}"
+                ItemsSource="{Binding Results.SelectedItem.fields}"
                 ScrollViewer.CanContentScroll="True"
                 ScrollViewer.HorizontalScrollBarVisibility="Auto"
                 ScrollViewer.VerticalScrollBarVisibility="Auto">
@@ -111,7 +111,7 @@
             </dxg:GridControl>
 
             <dxg:GridControl Grid.Column="2"
-                ItemsSource="{Binding WorkItemTypes.SelectedItem.fieldInstances}"
+                ItemsSource="{Binding Results.SelectedItem.fieldInstances}"
                 ScrollViewer.CanContentScroll="True"
                 ScrollViewer.HorizontalScrollBarVisibility="Auto"
                 ScrollViewer.VerticalScrollBarVisibility="Auto">
@@ -169,7 +169,7 @@
             
         </Grid>
 
-        <dxe:TextEdit Grid.Row="4" Text="{Binding WorkItemTypes.SelectedItem.xmlForm}"  
+        <dxe:TextEdit Grid.Row="4" Text="{Binding Results.SelectedItem.xmlForm}"  
                       TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
 
     </Grid>
