--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemTypesFieldMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemTypesFieldMain.xaml
@@ -45,8 +45,8 @@
         <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0" />
 
         <dxg:GridControl x:Name="grdResults" Grid.Row="1"
-                    ItemsSource="{Binding WorkItemTypesFields.ResultItems}"
-                    SelectedItem="{Binding WorkItemTypesFields.SelectedItem}"               
+                    ItemsSource="{Binding Results.ResultItems}"
+                    SelectedItem="{Binding Results.SelectedItem}"               
                     FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
@@ -59,7 +59,7 @@
             <!--<dxg:GridColumn FieldName="url" />-->            
         </dxg:GridControl>
 
-        <dxe:TextEdit Grid.Row="2" Text="{Binding WorkItemTypesFields.SelectedItem.url}" />
+        <dxe:TextEdit Grid.Row="2" Text="{Binding Results.SelectedItem.url}" />
 
         <Grid Grid.Row="3">
             <Grid.RowDefinitions>
@@ -71,7 +71,7 @@
             </Grid.ColumnDefinitions>
 
             <dxg:GridControl Grid.Column="0"
-                ItemsSource="{Binding WorkItemTypesFields.SelectedItem.allowedValues}"
+                ItemsSource="{Binding Results.SelectedItem.allowedValues}"
                 AutoGenerateColumns="AddNew"
                 ScrollViewer.CanContentScroll="True"
                 ScrollViewer.HorizontalScrollBarVisibility="Auto"
@@ -82,7 +82,7 @@
             </dxg:GridControl>
 
             <dxg:GridControl Grid.Column="1"
-                ItemsSource="{Binding WorkItemTypesFields.SelectedItem.dependendFields}"
+                ItemsSource="{Binding Results.SelectedItem.dependendFields}"
                 ScrollViewer.CanContentScroll="True"
                 ScrollViewer.HorizontalScrollBarVisibility="Auto"
                 ScrollViewer.VerticalScrollBarVisibility="Auto">
