--- a/AZDORestApiExplorer/Presentation/Views/MainWindow.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/MainWindow.xaml
@@ -96,10 +96,14 @@
                             <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.CommandGetRegion}" />
                         </dxdo:LayoutPanel>
 
-                        <dxdo:LayoutPanel Caption="Test" >
-                            <local:TestMain />
+                        <!--Put the area of current interest here 
+                            until we figure out how to make this easy to navigate-->
+
+
+                        <dxdo:LayoutPanel Caption="Work Item Tracking" >
+                            <local:WorkItemTrackingMain />
                         </dxdo:LayoutPanel>
- 
+
                     </dxdo:LayoutGroup>
 
                     <dxdo:LayoutGroup  MinWidth="375" ItemWidth="400">
@@ -160,10 +164,11 @@
                         <dxdo:LayoutPanel Caption="Git" AutoHidden="True" >
                             <local:GitMain />
                         </dxdo:LayoutPanel>
-                        
-                        <dxdo:LayoutPanel Caption="Work Item Tracking" AutoHidden="True" TabBackgroundColor="AliceBlue" >
-                            <local:WorkItemTrackingMain />
+
+                        <dxdo:LayoutPanel Caption="Test" AutoHidden="True" >
+                            <local:TestMain />
                         </dxdo:LayoutPanel>
+
                         
                         <dxdo:LayoutPanel Caption="Work Item Tracking Process" AutoHidden="True">
                             <local:WorkItemTrackingProcessMain />
@@ -345,7 +350,7 @@
         </dxlc:LayoutGroup>
 
         <dxlc:LayoutGroup VerticalAlignment="Bottom">
-            <DockPanel Grid.Row="1" >
+            <DockPanel>
 
                 <StackPanel Orientation="Horizontal" Margin="5" DockPanel.Dock="Right" >
                     <Label Content=".NET Runtime: " />
