--- a/AZDORestApiExplorer/Resources/Xaml/Display_StylesAndTemplates.xaml
+++ b/AZDORestApiExplorer/Resources/Xaml/Display_StylesAndTemplates.xaml
@@ -1,20 +1,13 @@
-﻿<ResourceDictionary    
+﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"  
     xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
-    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"    
-    xmlns:dxdo="http://schemas.devexpress.com/winfx/2008/xaml/docking"    
-    xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
-    
-    xmlns:local="clr-namespace:AZDORestApiExplorer"
-
-    xmlns:d="http://schemas.microsoft.com/expression/interactivedesigner/2006" 
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    mc:Ignorable="d" >
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d">
 
     <BooleanToVisibilityConverter x:Key="booleanToVisibilityConverter" />
-    
+
     <SolidColorBrush x:Key="FriendMainBackground" Color="#F04040" />
     <SolidColorBrush x:Key="FriendNavigationBackground" Color="#F08040" />
     <SolidColorBrush x:Key="FriendMeetingDetailBackground" Color="#F0C040" />
@@ -29,71 +22,72 @@
     <SolidColorBrush x:Key="TestColor" Color="#FFB6007B" />
     <SolidColorBrush x:Key="WorkItemTypeColor" Color="#FFA68ADE" />
 
-    <Style x:Key="OutlineBorder" TargetType="Border">
+    <Style x:Key="OutlineBorder" TargetType="{x:Type Border}">
         <Setter Property="BorderBrush" Value="Black" />
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="CornerRadius" Value="5" />
     </Style>
-    <Style x:Key="CountBorder" TargetType="Border">
+    <Style x:Key="CountBorder" TargetType="{x:Type Border}">
         <Setter Property="BorderBrush" Value="Black" />
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="CornerRadius" Value="5" />
         <Setter Property="HorizontalAlignment" Value="Center" />
     </Style>
-    <Style x:Key="CountTextBlock" TargetType="TextBlock">
+    <Style x:Key="CountTextBlock" TargetType="{x:Type TextBlock}">
         <Setter Property="Foreground" Value="Black" />
         <!--<Setter Property="FontSize" Value="18" />-->
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="Margin" Value="0,0,5,0" />
     </Style>
-    <Style x:Key="CountStackPanel" TargetType="StackPanel">
+    <Style x:Key="CountStackPanel" TargetType="{x:Type StackPanel}">
         <Setter Property="Orientation" Value="Horizontal" />
         <Setter Property="Margin" Value="-3,-5,-2,-3" />
     </Style>
-    
-    <Style TargetType="TextBox">
-        <Setter Property="Validation.ErrorTemplate"> 
+
+    <Style x:Key="SelectableText" TargetType="{x:Type dxe:TextEdit}">
+        <Setter Property="IsReadOnly" Value="True" />
+        <Setter Property="ShowBorder" Value="False" />
+        <Setter Property="Background" Value="#FFE1FFE1" />
+    </Style>
+
+    <Style TargetType="{x:Type TextBox}">
+        <Setter Property="Validation.ErrorTemplate">
             <Setter.Value>
                 <ControlTemplate>
                     <StackPanel>
-                        <AdornedElementPlaceholder x:Name="placeholder"/>
-                        <TextBlock FontSize="12" Foreground="Red" 
-                                   Text="{Binding ElementName=placeholder,
-                                          Path=AdornedElement.(Validation.Errors)[0].ErrorContent}"/>
+                        <AdornedElementPlaceholder x:Name="placeholder" />
+                        <TextBlock FontSize="12" Foreground="Red"
+                                   Text="{Binding AdornedElement.(Validation.Errors)[0].ErrorContent, ElementName=placeholder}" />
                     </StackPanel>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
         <Style.Triggers>
             <Trigger Property="Validation.HasError" Value="True">
-                <Setter Property="Background" Value="Red"/>
-                <Setter Property="ToolTip" 
-                        Value="{Binding RelativeSource={RelativeSource Self},
-                                Path=(Validation.Errors)[0].ErrorContent}"/>
+                <Setter Property="Background" Value="Red" />
+                <Setter Property="ToolTip"
+                        Value="{Binding (Validation.Errors)[0].ErrorContent, RelativeSource={RelativeSource Self}}" />
             </Trigger>
         </Style.Triggers>
     </Style>
 
-    <Style x:Key="DataGridColumnStyle" TargetType="TextBlock">
+    <Style x:Key="DataGridColumnStyle" TargetType="{x:Type TextBlock}">
         <Style.Triggers>
             <Trigger Property="Validation.HasError" Value="True">
-                <Setter Property="Background" Value="Red"/>
-                <Setter Property="ToolTip" 
-                        Value="{Binding RelativeSource={RelativeSource Self},
-                                Path=(Validation.Errors)[0].ErrorContent}"/>
+                <Setter Property="Background" Value="Red" />
+                <Setter Property="ToolTip"
+                        Value="{Binding (Validation.Errors)[0].ErrorContent, RelativeSource={RelativeSource Self}}" />
             </Trigger>
         </Style.Triggers>
     </Style>
 
-    <Style x:Key="DataGridEditingColumnStyle" TargetType="TextBox">
+    <Style x:Key="DataGridEditingColumnStyle" TargetType="{x:Type TextBox}">
         <Style.Triggers>
             <Trigger Property="Validation.HasError" Value="True">
-                <Setter Property="Background" Value="Red"/>
-                <Setter Property="ToolTip" 
-                        Value="{Binding RelativeSource={RelativeSource Self},
-                                Path=(Validation.Errors)[0].ErrorContent}"/>
+                <Setter Property="Background" Value="Red" />
+                <Setter Property="ToolTip"
+                        Value="{Binding (Validation.Errors)[0].ErrorContent, RelativeSource={RelativeSource Self}}" />
             </Trigger>
         </Style.Triggers>
     </Style>
-    
 </ResourceDictionary>
