--- a/AZDORestApiExplorer.Git/Presentation/Views/CommitMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/CommitMain.xaml
@@ -52,10 +52,14 @@
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
             <dxg:GridColumn FieldName="commitId" />
-            <dxg:GridColumn FieldName="author" />
-            <dxg:GridColumn FieldName="committer" />
+            <dxg:GridColumn FieldName="author.date" />
+            <dxg:GridColumn FieldName="author.name" />
+            <dxg:GridColumn FieldName="committer.date" />
+            <dxg:GridColumn FieldName="committer.name" />
             <dxg:GridColumn FieldName="comment" />
-            <dxg:GridColumn FieldName="changeCounts" />
+            <dxg:GridColumn FieldName="changeCounts.Add" />
+            <dxg:GridColumn FieldName="changeCounts.Delete" />
+            <dxg:GridColumn FieldName="changeCounts.Edit" />
             <dxg:GridColumn FieldName="remoteUrl" />
             <dxg:GridColumn FieldName="commentTruncated" />
         </dxg:GridControl>
