--- a/AZDORestApiExplorer.Git/Presentation/Views/CommitChangeMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/CommitChangeMain.xaml
@@ -51,11 +51,17 @@
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
-            <dxg:GridColumn FieldName="name" />
+            <dxg:GridColumn FieldName="changeType" />
+            <dxg:GridColumn FieldName="item.objectId" />
+            <dxg:GridColumn FieldName="item.originalObjectId" />
+            <!--<dxg:GridColumn FieldName="item.commitId" />-->
+            <dxg:GridColumn FieldName="item.isFolder" />
+            <dxg:GridColumn FieldName="item.path" />
+            
         </dxg:GridControl>
 
         <dxe:TextEdit Grid.Row="2"
-            Text="{Binding Results.SelectedItem.url}"
+            Text="{Binding Results.SelectedItem.item.url}"
             TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
 
     </Grid>
