--- a/AZDORestApiExplorer/Presentation/Views/MainWindow.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/MainWindow.xaml
@@ -99,29 +99,35 @@
                         <!--Put the area of current interest here 
                             until we figure out how to make this easy to navigate-->
 
-                        <dxdo:LayoutPanel Caption="Artifacts" >
-                            <local:ArtifactsMain />
+                        <dxdo:LayoutPanel Caption="Git" >
+                            <local:GitMain />
                         </dxdo:LayoutPanel>
 
                     </dxdo:LayoutGroup>
 
-                    <dxdo:LayoutGroup  MinWidth="375" ItemWidth="400">
-                        
-                        <dxdo:LayoutPanel Caption="Context Level Providers" >
-                            <dxlc:LayoutGroup>
-                                <Grid>
-                                    <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.ContextMainRegion}" />
-                                </Grid>
-                            </dxlc:LayoutGroup>
-                        </dxdo:LayoutPanel>
+                    <!--<dxdo:LayoutGroup  MinWidth="375" ItemWidth="400">-->
 
-                    </dxdo:LayoutGroup>
-                        
+
+
+                    <!--</dxdo:LayoutGroup>-->
+
+                    <dxdo:LayoutPanel Caption="Context Level Providers"  MinWidth="375" ItemWidth="400" >
+                        <dxlc:LayoutGroup>
+                            <Grid>
+                                <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.ContextMainRegion}" />
+                            </Grid>
+                        </dxlc:LayoutGroup>
+                    </dxdo:LayoutPanel>
+
                 </dxdo:LayoutGroup>
 
                 <dxdo:DockLayoutManager.FloatGroups>
                     <dxdo:FloatGroup>
 
+                        <dxdo:LayoutPanel Caption="HTTP Exchange">
+                            <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.HTTPExchangeMainRegion}" />
+                        </dxdo:LayoutPanel>
+                        
                     </dxdo:FloatGroup>
                 </dxdo:DockLayoutManager.FloatGroups>
                 
@@ -153,21 +159,25 @@
 
                     <dxdo:AutoHideGroup DockType="Bottom">
                         
-                        <dxdo:LayoutPanel Caption="HTTP Exchange" >
+                        <!--<dxdo:LayoutPanel Caption="HTTP Exchange" >
                              <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.HTTPExchangeMainRegion}" />
-                        </dxdo:LayoutPanel>
+                        </dxdo:LayoutPanel>-->
 
                         <dxdo:LayoutPanel Caption="Accounts" >
                                 <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.AccountMainRegion}" />
+                        </dxdo:LayoutPanel>
+
+                        <dxdo:LayoutPanel Caption="Artifacts" >
+                            <local:ArtifactsMain />
                         </dxdo:LayoutPanel>
 
                         <dxdo:LayoutPanel Caption="Dashboard" AutoHidden="True" TabBackgroundColor="Red" >
                             <local:DashboardMain />
                         </dxdo:LayoutPanel>
 
-                        <dxdo:LayoutPanel Caption="Git" AutoHidden="True" >
+                        <!--<dxdo:LayoutPanel Caption="Git" AutoHidden="True" >
                             <local:GitMain />
-                        </dxdo:LayoutPanel>
+                        </dxdo:LayoutPanel>-->
 
                         <dxdo:LayoutPanel Caption="Test" AutoHidden="True" >
                             <local:TestMain />
