--- a/AZDORestApiExplorer.Git/Presentation/Views/PullRequestMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/PullRequestMain.xaml
@@ -87,7 +87,7 @@
 
                 <dxg:GridControl x:Name="grdResultsAttachments" Grid.Row="1"
                     ItemsSource="{Binding ResultsAttachments.ResultItems}"
-                    SelectedItem="{Binding Results.SelectedItem}"
+                    SelectedItem="{Binding ResultsAttachments.SelectedItem}"
                     FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
@@ -103,7 +103,7 @@
                 </dxg:GridControl>
 
                 <dxe:TextEdit Grid.Row="2"
-                    Text="{Binding Results.SelectedItem.url}"
+                    Text="{Binding ResultsAttachments.SelectedItem.url}"
                     TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
 
                 <TextBlock Text="{Binding Message}" Grid.Row="3" />
@@ -124,23 +124,20 @@
 
                 <dxg:GridControl x:Name="grdResultsCommits" Grid.Row="1"
                     ItemsSource="{Binding ResultsCommits.ResultItems}"
-                    SelectedItem="{Binding Results.SelectedItem}"
+                    SelectedItem="{Binding ResultsCommits.SelectedItem}"
                     FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
-                    <dxg:GridColumn FieldName="title" />
-                    <dxg:GridColumn FieldName="description" />
-                    <dxg:GridColumn FieldName="pullRequestId" />
-                    <dxg:GridColumn FieldName="codeReviewId" />
-                    <dxg:GridColumn FieldName="status" />
-                    <dxg:GridColumn FieldName="createdBy.uniqueName" />
-                    <dxg:GridColumn FieldName="creationDate" />
+                    <dxg:GridColumn FieldName="commitId" />
+                    <dxg:GridColumn FieldName="author.name" />
+                    <dxg:GridColumn FieldName="committer.name" />
+                    <dxg:GridColumn FieldName="comment" />
                     <!--<dxg:GridColumn FieldName="url" />-->
                 </dxg:GridControl>
 
                 <dxe:TextEdit Grid.Row="2"
-                    Text="{Binding Results.SelectedItem.url}"
+                    Text="{Binding ResultsCommits.SelectedItem.url}"
                     TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
 
                 <TextBlock Text="{Binding Message}" Grid.Row="3" />
@@ -161,23 +158,25 @@
 
                 <dxg:GridControl x:Name="grdResultsIterations" Grid.Row="1"
                     ItemsSource="{Binding ResultsIterations.ResultItems}"
-                    SelectedItem="{Binding Results.SelectedItem}"
+                    SelectedItem="{Binding ResultsIterations.SelectedItem}"
                     FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
-                    <dxg:GridColumn FieldName="title" />
+                    <dxg:GridColumn FieldName="author.uniqueName" />
+                    <dxg:GridColumn FieldName="commonRefCommit.commitId" />
+                    <dxg:GridColumn FieldName="createdDate" />
                     <dxg:GridColumn FieldName="description" />
-                    <dxg:GridColumn FieldName="pullRequestId" />
-                    <dxg:GridColumn FieldName="codeReviewId" />
-                    <dxg:GridColumn FieldName="status" />
-                    <dxg:GridColumn FieldName="createdBy.uniqueName" />
-                    <dxg:GridColumn FieldName="creationDate" />
+                    <dxg:GridColumn FieldName="hasMoreCommits" />
+                    <dxg:GridColumn FieldName="id" />
+                    <dxg:GridColumn FieldName="push.pushId" />
+                    <dxg:GridColumn FieldName="reason" />
+                    <dxg:GridColumn FieldName="updatedDate" />
                     <!--<dxg:GridColumn FieldName="url" />-->
                 </dxg:GridControl>
 
                 <dxe:TextEdit Grid.Row="2"
-                    Text="{Binding Results.SelectedItem.url}"
+                    Text="{Binding ResultsIterations.SelectedItem.url}"
                     TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
 
                 <TextBlock Text="{Binding Message}" Grid.Row="3" />
@@ -198,7 +197,7 @@
 
                 <dxg:GridControl x:Name="grdResultsLabels" Grid.Row="1"
                     ItemsSource="{Binding ResultsLabels.ResultItems}"
-                    SelectedItem="{Binding Results.SelectedItem}"
+                    SelectedItem="{Binding ResultsLabels.SelectedItem}"
                     FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
@@ -214,7 +213,7 @@
                 </dxg:GridControl>
 
                 <dxe:TextEdit Grid.Row="2"
-                    Text="{Binding Results.SelectedItem.url}"
+                    Text="{Binding ResultsLabels.SelectedItem.url}"
                     TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
 
                 <TextBlock Text="{Binding Message}" Grid.Row="3" />
@@ -235,7 +234,7 @@
 
                 <dxg:GridControl x:Name="grdResultsProperties" Grid.Row="1"
                     ItemsSource="{Binding ResultsProperties.ResultItems}"
-                    SelectedItem="{Binding Results.SelectedItem}"
+                    SelectedItem="{Binding ResultsProperties.SelectedItem}"
                     FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
@@ -251,7 +250,7 @@
                 </dxg:GridControl>
 
                 <dxe:TextEdit Grid.Row="2"
-                    Text="{Binding Results.SelectedItem.url}"
+                    Text="{Binding ResultsProperties.SelectedItem.url}"
                     TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
 
                 <TextBlock Text="{Binding Message}" Grid.Row="3" />
@@ -272,7 +271,7 @@
 
                 <dxg:GridControl x:Name="grdResultsReviewers" Grid.Row="1"
                     ItemsSource="{Binding ResultsReviewers.ResultItems}"
-                    SelectedItem="{Binding Results.SelectedItem}"
+                    SelectedItem="{Binding ResultsReviewers.SelectedItem}"
                     FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
@@ -286,7 +285,7 @@
                 </dxg:GridControl>
 
                 <dxe:TextEdit Grid.Row="2"
-                    Text="{Binding Results.SelectedItem.url}"
+                    Text="{Binding ResultsReviewers.SelectedItem.url}"
                     TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
 
                 <TextBlock Text="{Binding Message}" Grid.Row="3" />
@@ -307,7 +306,7 @@
 
                 <dxg:GridControl x:Name="grdResultsStatuses" Grid.Row="1"
                     ItemsSource="{Binding ResultsStatuses.ResultItems}"
-                    SelectedItem="{Binding Results.SelectedItem}"
+                    SelectedItem="{Binding ResultsStatuses.SelectedItem}"
                     FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
@@ -323,7 +322,7 @@
                 </dxg:GridControl>
 
                 <dxe:TextEdit Grid.Row="2"
-                    Text="{Binding Results.SelectedItem.url}"
+                    Text="{Binding ResultsStatuses.SelectedItem.url}"
                     TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
 
                 <TextBlock Text="{Binding Message}" Grid.Row="3" />
@@ -344,7 +343,7 @@
 
                 <dxg:GridControl x:Name="grdResultsThreads" Grid.Row="1"
                     ItemsSource="{Binding ResultsThreads.ResultItems}"
-                    SelectedItem="{Binding Results.SelectedItem}"
+                    SelectedItem="{Binding ResultsThreads.SelectedItem}"
                     FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
@@ -360,7 +359,7 @@
                 </dxg:GridControl>
 
                 <dxe:TextEdit Grid.Row="2"
-                    Text="{Binding Results.SelectedItem.url}"
+                    Text="{Binding ResultsThreads.SelectedItem.url}"
                     TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
 
                 <TextBlock Text="{Binding Message}" Grid.Row="3" />
@@ -381,23 +380,17 @@
 
                 <dxg:GridControl x:Name="grdResultsWorkItems" Grid.Row="1"
                     ItemsSource="{Binding ResultsWorkItems.ResultItems}"
-                    SelectedItem="{Binding Results.SelectedItem}"
+                    SelectedItem="{Binding ResultsWorkItems.SelectedItem}"
                     FontSize="12"
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
-                    <dxg:GridColumn FieldName="title" />
-                    <dxg:GridColumn FieldName="description" />
-                    <dxg:GridColumn FieldName="pullRequestId" />
-                    <dxg:GridColumn FieldName="codeReviewId" />
-                    <dxg:GridColumn FieldName="status" />
-                    <dxg:GridColumn FieldName="createdBy.uniqueName" />
-                    <dxg:GridColumn FieldName="creationDate" />
+                    <dxg:GridColumn FieldName="id" />
                     <!--<dxg:GridColumn FieldName="url" />-->
                 </dxg:GridControl>
 
                 <dxe:TextEdit Grid.Row="2"
-                    Text="{Binding Results.SelectedItem.url}"
+                    Text="{Binding ResultsWorkItems.SelectedItem.url}"
                     TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
 
                 <TextBlock Text="{Binding Message}" Grid.Row="3" />
